@@ -1,3 +1,8 @@
+2005-10-13  Rodney Dawes  <dobey@novell.com>
+
+	* legacy-icon-mapping.xml: Add edit-paste and utilities-system-monitor
+	to the list of icons to map older names to
+
 2005-10-12  Rodney Dawes  <dobey@novell.com>
 
 	* legacy-icon-mapping.xml: Update the links for some GTK+ stock icons
